# windowsipc

./: .gitignore  README.md
AnonymousPipesDemo/: CMakeLists.txt
AnonymousPipesDemo/childprocess/: CMakeLists.txt  main.cpp
AnonymousPipesDemo/parentpocess/: CMakeLists.txt  main.cpp
AnonymousPipesDemo/shared/: cslock.cpp  cslock.h
createprocessdemo/: CMakeLists.txt
createprocessdemo/childprocess/: CMakeLists.txt
createprocessdemo/parentpocess/: CMakeLists.txt  fileforparenttoread.txt  main.cpp
namedpipedemo/: CMakeLists.txt
namedpipedemo/client/: CMakeLists.txt  main.cpp
namedpipedemo/clientinput/: CMakeLists.txt  main.cpp
namedpipedemo/servermultithreaded/: CMakeLists.txt  main.cpp
namedpipedemo/serveroverlapped/: CMakeLists.txt  main.cpp
namedpipeipc/: CMakeLists.txt  README.md
namedpipeipc/clientnamedpipe/: CMakeLists.txt  main.cpp
namedpipeipc/servernamedpipe/: CMakeLists.txt  main.cpp
namedpipeipc/shared/: cslock.h  namepipeipc.cpp  namepipeipc.h
overlappeddemo/: CMakeLists.txt
overlappeddemo/clientnamedpipe/: CMakeLists.txt  main.cpp
overlappeddemo/fileoverlapped/: CMakeLists.txt  main.cpp
overlappeddemo/filepublicoverlapped/: CMakeLists.txt  main.cpp
overlappeddemo/iocpdemo/: CMakeLists.txt  FileCopy.cpp
overlappeddemo/servernamedpipe/: CMakeLists.txt  cslock.h  main.cpp
overlappeddemo/servernamedpipeiocp/: CMakeLists.txt  iocp.h  main.cpp
overlappeddemo/servernamedpipeiocpmulthread/: CMakeLists.txt  README.md  cslock.cpp  main.cpp
pipedemo/processa/: main.cpp
pipedemo/processb/: main.cpp
pipewithsizedemo/processa/: main.cpp
pipewithsizedemo/processb/: CMakeLists.txt  main.cpp
sharememorydemo/processa/: CMakeLists.txt  main.cpp
sharememorydemo/processb/: main.cpp
